# rust-firmware

./: Cargo.toml
rust-vsock-payload/: Cargo.toml
rust-vsock-payload/src/: device.rs  hal.rs  heap.rs  hob_utils.rs  lib.rs  main.rs  ring_buffer.rs  virtio.rs  virtio_blk_device.rs  virtio_impl.rs  virtio_pci.rs  virtio_vsock_device.rs  virtqueue.rs  vsock.rs  vsock_impl.rs
